# ros

assignment3/: basedoor.cpp  basekinect.h
assignment3/basecontrol/: CMakeLists.txt~  manifest.xml~
assignment3/basecontrol/src/: control.cpp
assignment3/slam/: manifest.xml
assignment3/slam/launch/: pclslam.launch  slam.launch~
assignment4/: basecontrol1.cpp  basecontrol1.h  basenav.cpp
assignment4/basecontrol/: CMakeLists.txt  manifest.xml
assignment4/basecontrol/launch/: control.launch~
assignment4/navigation/: manifest.xml
assignment4/navigation/config/: amcl.launch
assignment4/navigation/launch/: amcl_nav.launch  move_base.launch
assignment4/slam/launch/: pclslam.launch~  slam.launch
assignment6/basecontrol/: CMakeLists.txt~  mainpage.dox  manifest.xml  manifest.xml~
assignment6/basecontrol/launch/: joy.launch  joy.launch~  robot.launch  robot.launch~
assignment6/basecontrol/src/: alarm.cpp  alarm.cpp~  control.cpp~  goal.cpp~
assignment6/maps/: map3.pgm
assignment6/navigation/config/: amcl1.launch  base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params.yaml~  global_costmap_params.yaml~  local_costmap_params.yaml  moves.txt  moves.txt~
assignment6/navigation/launch/: .amcl_nav.launch.kate-swp
assignment6/peopledet/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox
assignment6/peopledet/src/: imagetext.cpp~  peopledet.cpp  peopledet.cpp~  ppldet.cpp  ppldet.cpp~
assignment6/threemxl/: CMakeLists.txt~
assignment6/threemxl/launch/: example.launch
assignment6/threemxl/msg/: MultiArrayFloat32.msg~
assignment6/threemxl/src/: CDxlROSPacketHandler.cpp  LxFTDI.cpp  base.cpp  base.cpp~  basearduino.cpp  basearduino.cpp~  basecontrol.cpp~  basefollow.cpp  basefollow.cpp~  basekinect.cpp  basekinect1.cpp~  basenav.cpp  basepos.cpp  basepos.cpp~  gripper.cpp~  micview.cpp  micview.cpp~  personfollow.cpp  syncreadtest.cpp
phidgets/: CMakeLists.txt  stack.xml
phidgets/phidget_ik/: CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml~  rosdoc.yaml
phidgets/phidget_ik/.svn/: all-wcprops  entries
phidgets/phidget_ik/src/: example.cpp~  sensor.cpp~  test.cpp  test.cpp~
phidgets/phidget_rfid/: CMakeLists.txt  manifest.xml
phidgets/phidget_text/: CMakeLists.txt  CMakeLists.txt~  demo_text.cc  display_msg.cc  manifest.xml  mykit.cc  send_string.cc
phidgets/phidgetspp/: CMakeLists.txt  CMakeLists.txt~  lcd_demo  rfid_demo
phidgets/phidgetspp/include/: phidgetspp.hh
phidgets/phidgetspp/src/: lcd_demo.cc  rfid_demo.cc
phidgets/phidgetspp_c_api/: Makefile  Phidgetlinux.md5sum
robot/arduino1/: CMakeLists.txt  mainpage.dox  manifest.xml
robot/audioloc/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml
robot/basecontrol/: CMakeLists.txt
robot/maps/: map.yaml  map.yaml~  map2 (copy).pgm  map2.pgm  map3.pgm  map_obstacle_course_better.pgm
robot/peopledet/: manifest.xml
robot/rosserial/: .hgtags
robot/slam/: mainpage.dox
robot/threemxl/: CMakeLists.txt  CMakeLists.txt~  manifest.xml  manifest.xml~
threemxl/: CMakeLists.txt  CMakeLists.txt~  manifest.xml  manifest.xml~
threemxl/.svn/: all-wcprops  entries
threemxl/include/threemxl/.svn/: entries
threemxl/include/threemxl/.svn/text-base/: dxlassert.h.svn-base
threemxl/src/: example.cpp~  gripper.cpp  gripper.cpp~
threemxl/src/.svn/: entries
threemxl/src/.svn/text-base/: benchmark.cpp.svn-base
urdfw/: 05-visual.urdf~  gripper.launch  gripper.launch~  gripper.urdf  gripper.urdf~  joint_state_publisher  manifest.xml  model.launch~  urdf.vcg
using_markers/: CMakeLists.txt  CMakeLists.txt~  manifest.xml~
using_markers/src/: basic_shapes.cpp~  listener.cpp  listener.cpp~
(+178 files in other folders)
